app/assets/stylesheets/print.scss
@import "base/*";
@import "utilities/*";
@import "pages/character";
@import "font-awesome-sprockets";
@import "font-awesome";
@import "components/form";

body {
  font-size: 16px;
  line-height: 22px;
  font-family: 'Roboto', sans-serif;
}

h2, h3 {
  text-align: left;
}

h2 {
  border-color: black;
  padding-bottom: 10px;
}

h3 {
  border-bottom: 3px solid $black;
  display: inline-block;
  padding-right: 24px;
  position: relative;
}

.sheet {
  page-break-after: always;

  .stats {
    page-break-after: always;
  }

  .qualitative {
    page-break-before: always;
  }

  .mod {
    font-size: 14px;
    display: block;
  }

  .boxes {
    display: flex;

    .mod {
      text-align: center;
    }

    &.stability {
      align-items: center;
    }
  }
  .ico-stability {
    i {
      color: $white;
      font-size: 20px;
      text-shadow: -1px -1px 0 $black, 1px 1px 0 $black, 1px -1px 0 $black, -1px 1px 0 $black;
    }

    &.current {
      i {
        color: $black;
        font-size: 32px;
        text-shadow: none;
      }
    }
  }
  .column-content {
    columns: 2;

    .column-item {
      break-inside: avoid;
    }
  }

  .advantages {
    page-break-inside: avoid;
    ul {
      columns: 200px 2;

      li {
        break-inside: avoid;

        .name {
          font-weight: bold;
        }

        ul {
          list-style: disc;
          margin-left: 2em;
          margin-top: .5em;
          li {
            margin-bottom: 0 !important;
          }
        }
      }
    }
  }
}

.flex-container {
  display: flex;
  flex-wrap: nowrap;

  .column {
    .row {
      padding: 0;
    }
  }

  &#skills, &#attributes {
    .column {
      max-width: 33%;
      flex-grow: 0;
      min-width: 300px;
    }
  }
}

.card {
  page-break-inside: avoid;
  page-break-after: always;
  font-size: 12px;
  color: $black;
  position: relative;
  width: 100%;
  height: 100vh;

  h4 {
    border-bottom: 1px $black solid;
    width: 100%;
    margin-bottom: 1em;
    padding-bottom: .5em;
  }

  .boxes {
    display: flex;

    .box {
      text-align: center;
      margin-right: 5px;

      span {
        font-size: 12px;
        display: block;
        line-height: 1;
      }
    }
  }
  dl {
    display: flex;
    flex-wrap: wrap;
    dt {
      width: 12vw;
      font-weight: bold;
    }

    dd {
      width: 86vw;
      min-width: 86vw;
      margin-left: 2vw;
      margin-bottom: 0;
    }
  }

  .row {
    display: flex;
    flex-align: flex-end;
  }

  .left {
    width: 50%;
  }

  .right {
    text-align: right;
    width: 50%;
    position: absolute;
    bottom: 0;
    right: 0;
    font-size: 10px;
  }
}

